2019-05-29 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: Now handling the directive SingleThreadExit 
    * src/mod_rivet_ng/[worker|lazy|prefork].c: Now handling single thread exit
    * src/mod_rivet_ng/worker_prefork_common.c: Reviving and fixing Rivet_CleanupProcessor
    * src/mod_rivet_ng/mod_rivet_common.c: Add function Rivet_ReleaseRunningScripts to
    release Tcl_Obj instances of configuration scripts

2019-05-24 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: Add Tcl_DecrRefCnt after
    RivetCache_StoreScript as this function itself calls
    Tcl_IncrRefCnt to preserve the Tcl_Obj with the script code
    
2019-04-16 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/: also the worker and lazy bridge transitioned to 
    the new interpreter model

2019-04-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Correct wrong header in ::rivet::http_accept code example

2019-03-05 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Better semantics for macros RIVET_FOREACH_INTERPRETER and
    RIVET_FOREACH_VIRTUAL_HOST

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*: first draft version that compiles and runs with prefork

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/rivet.h: Add error message buffer size definition (was still hardcoded
	here and there)

2019-01-14 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: add experimental ::rivet::thread_id
	command

2019-01-08 Massimo Manghi <mxmanghi@apache.org>
	* : new branch quattuor created with an initial commit that tries
	to remodel the initialization, optimize intepreter creation, remove
	unneeded structures and other data keeping in mind the goal of
	abating complexity 

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
	* doc/: merging from 3.1 fixes to various broken docbook elements
	 and new entities to external resources' URLs